gcc/testsuite/gdc.test/runnable/extra-files/test13742.d
import lib13742b;

void main()
{
    clear();
}
