gcc/testsuite/gdc.test/fail_compilation/fail204.d
void main() {
        long c;
        c >>= 65;
}

